--- a/views/categories.handlebars
+++ b/views/categories.handlebars
@@ -5,72 +5,39 @@
   <div class="row center-align" style="min-height: 30px" id="sec-nav">
 
 
-      <div class="category-btn" id="mind">
-        <div class="col s2">
-          <a href="/categories/women-mind-body">Mind & Body</a>
-        </div>
     <div class="category-btn" id="mind">
       <div class="col s2">
-        <a href="/api/categories/women&body">Mind & Body</a>
+        <a href="/categories/women-mind-body">Mind & Body</a>
       </div>
     </div>
-
-      <div class="category-btn" id="love">
-        <div class="col s2">
-          <a href="/categories/intimacy">Love & Intimacy</a>
-        </div>
 
     <div class="category-btn" id="love">
       <div class="col s2">
-        <a href="/api/categories/intimacy">Love & Intimacy</a>
+        <a href="/categories/intimacy">Love & Intimacy</a>
       </div>
     </div>
-
-      <div class="category-btn" id="fertility">
-        <div class="col s2">
-          <a href="/categories/pregnancy">Fertility & Pregnancy</a>
-        </div>
 
     <div class="category-btn" id="fertility">
       <div class="col s2">
-        <a href="/api/categories/pregnancy">Fertility & Pregnancy</a>
+        <a href="/categories/pregnancy">Fertility & Pregnancy</a>
       </div>
     </div>
 
-
-      <div class="category-btn" id="family">
-        <div class="col s2">
-          <a href="/categories/parenting">Family & Parenting</a>
-        </div>
     <div class="category-btn" id="family">
       <div class="col s2">
-        <a href="/api/categories/parenting">Family & Parenting</a>
+        <a href="/categories/parenting">Family & Parenting</a>
       </div>
     </div>
-
-
-      <div class="category-btn" id="health">
-        <div class="col s2">
-          <a href="/categories/women&health">Women’s Health</a>
-        </div>
 
     <div class="category-btn" id="health">
       <div class="col s2">
-        <a href="/api/categories/women&health">Women’s Health</a>
-
+        <a href="/categories/women&health">Women’s Health</a>
       </div>
     </div>
 
-
-      <div class="category-btn" id="work">
-        <div class="col s2">
-          <a href="/categories/women-in-the-workplace">Women in the Workplace</a>
-        </div>
-
     <div class="category-btn" id="work">
       <div class="col s2">
-        <a href="/api/categories/women-in-the-workplace">Women in the Workplace</a>
-
+        <a href="/categories/women-in-the-workplace">Women in the Workplace</a>
       </div>
     </div>
 
@@ -80,78 +47,59 @@
 {{!-- Image Banner --}}
 <div class="row" id="categories-image-section">
   {{#render_category "women-mind-body" this.category}}
-     {{> mind-body}}
+  {{> mind-body}}
   {{/render_category}}
 
   {{#render_category "intimacy" this.category}}
-     {{> love-intimacy}}
+  {{> love-intimacy}}
   {{/render_category}}
 
   {{#render_category "pregnancy" this.category}}
-     {{> fertility-pregnancy}}
+  {{> fertility-pregnancy}}
   {{/render_category}}
 
   {{#render_category "parenting" this.category}}
-     {{> family-parenting}}
+  {{> family-parenting}}
   {{/render_category}}
 
   {{#render_category "women&health" this.category}}
-     {{> womens-health}}
+  {{> womens-health}}
   {{/render_category}}
 
   {{#render_category "women-in-the-workplace" this.category}}
-     {{> women-workplace}}
+  {{> women-workplace}}
   {{/render_category}}
 
   {{#render_category "category" this.category}}
-    {{> categories-landing}}
+  {{> categories-landing}}
   {{/render_category}}
 
+  {{!-- Article Results go here dynamically using API and javascript--}}
 
 
-{{!-- Related Articles Section --}}
-<div class="row results-header">
-  <div class="col s12 center-align">
-    <h5>Related Articles</h5>
-    <hr align="center" width="30%">
-  </div>
-
-</div>
-
-
-{{!-- Article Results go here dynamically using API and javascript--}}
-
-  
   <div class="container results-body">
     <div class="row">
       {{#each result}}
       <div class="col s12 m6 l4 article-card" id="category-articles">
         <a target="blank" href="{{this.url}}">
-
-
-<div class="container results-body">
-  <div class="row">
-    {{#each result}}
-    <div class="col s12 m6 l4 article-card">
-      <a target="blank" href="{{this.url}}">
-
-        <div class="card">
-          <div class="card-image" id="urlImage">
-            <img src="{{this.urlToImage}}" alt="article"></div>
-        </div>
-        <div class="card-content center-align">
-          <p>{{this.publishedAt}}</p>
-          <span>
-            <h6>{{this.title}}</h6>
-          </span>
-          <p>By: {{this.author}}</p>
-        </div>
-      </a>
+          <div class="card">
+            <div class="card-image" id="urlImage">
+              <img src="{{this.urlToImage}}" alt="article"></div>
+          </div>
+          <div class="card-content center-align">
+            <p>{{this.publishedAt}}</p>
+            <span>
+              <h6>{{this.title}}</h6>
+            </span>
+            <p>By: {{this.author}}</p>
+          </div>
+        </a>
+      </div>
+      {{/each}}
     </div>
-    {{/each}}
   </div>
 </div>
 
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script type="text/javascript" src="/js/categories.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+</script>
