--- a/views/services.handlebars
+++ b/views/services.handlebars
@@ -295,7 +295,7 @@
 </div>
 
     {{!-- example code below --}}
-    <div class="row">
+    {{!-- <div class="row">
       <div class="col-8 offset-2">
         <h1>{{msg}}</h1>
         <h2>This is our Home Page!</h2>
@@ -323,7 +323,7 @@
           {{/each}}
         </ul>
       </div>
-    </div>
+    </div> --}}
 
 
 {{!-- List of volunteers --}}
