--- a/views/services.handlebars
+++ b/views/services.handlebars
@@ -114,7 +114,6 @@
         </div>
     </div>
 
-<<<<<<< HEAD
     {{!-- User account signup --}}
 
     <div class="container">
@@ -136,15 +135,13 @@
         </div>
     </div>
 
-=======
->>>>>>> 3c3516d1946a81a7385a7f1fcab1fd03528bd837
     <div class="container" id="signup">
 
         {{!-- Hero Banner --}}
 
         <div class="row">
             <div class="hero-image" id="services-hero-image">
-                <p id="request_volunteer">Request services or volunteer today!</p>
+                <p id="request_volunteer">If you need more information or have questions, please click on the purple chat icon to your right!</p>
             </div>
         </div>
     </div>
