--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -135,7 +135,7 @@
   <div class="row center-align">
     <div class="col s12 m4">
       <img src="/images/article-icon.png" alt="article-icon" id="article-icon">
-      <div class="card concept-card">
+      <div class="card concept-card explore">
         <div class="card-content grey-darken-3-text">
           <span class="card-title">Explore</span>
           <p>We provide a dedicated space for women of all ages and allies of women to explore stories, articles, blogs,
@@ -153,7 +153,7 @@
 
     <div class="col s12 m4">
       <img src="/images/service-icon.png" alt="service-icon" id="service-icon">
-      <div class="card concept-card">
+      <div class="card concept-card service">
         <div class="card-content grey-darken-3-text">
           <span class="card-title">Service</span>
           <p>We offer a wide range of services you can book with our fully vetted team of volunteers while also providing a
@@ -169,7 +169,7 @@
     {{!-- About Volunteering --}}
     <div class="col s12 m4">
       <img src="/images/community-icon.png" alt="community-icon" id="community-icon">
-      <div class="card concept-card">
+      <div class="card concept-card community">
         <div class="card-content grey-darken-3-text">
           <span class="card-title">Community</span>
           <p>Volunteering will give you the chance to create the kind of community you would like to live
