--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -357,4 +357,19 @@ h5 {
       font-size: 10px;
     }
 
+    #categories-image-section {
+      margin-top: 10px;
+      position: relative;
+      height: 30%;
+      width: 100%;
+    }
+    
+    #categories-image-banner, #categories-image-banner2 {
+      width: 100%;
+      height: 200px;
+    }
+
+    #categories-hero-text h3 {
+      font-size: 1.5rem;
+    }
 }
